Fix - increase nav bar font size as too small when tested on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,10 +487,10 @@ th, td {
     /* nav bar */
 
     #menu li {
-        font-size: 0.5rem;
+        font-size: 0.8rem;
         clear: left;
         float: left;
-        line-height: 0.8rem;
+        line-height: 1.2rem;
     }
 
     /*hero image*/
